2019-02-01  Florian Weimer  <fweimer@redhat.com>

	* support/support_format_address_family.c
	(support_format_address_family): Handle AF_LOCAL, AF_UNSPEC.

2019-02-01  Florian Weimer  <fweimer@redhat.com>

	* manual/socket.texi (Internet Address Formats): Clarify the byte
	order of struct sockaddr_in, struct sockaddr_in6.  Document
	sin6_flowinfo and sin6_scope_id.

2019-02-01  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/posix/clock_getres.c (__clock_getres): Cleanup.
	* sysdeps/unix/clock_gettime.c (__clock_gettime): Cleanup.
	* sysdeps/unix/clock_settime.c (__clock_settime): Cleanup.
	* sysdeps/unix/sysv/linux/clock_getres.c (__clock_getres): Cleanup.
	* sysdeps/unix/sysv/linux/clock_gettime.c (__clock_gettime): Cleanup.
	* sysdeps/unix/sysv/linux/clock_settime.c (__clock_settime): Cleanup.

2019-02-01  Feng Xue  <fxue@os.amperecomputing.com>

	* sysdeps/aarch64/memchr.S (__memchr): Rename to MEMCHR.
	[!MEMCHR](MEMCHR): Set to __memchr.
	* sysdeps/aarch64/multiarch/Makefile (sysdep_routines):
	Add memchr_generic and memchr_nosimd.
	* sysdeps/aarch64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Add memchr ifuncs.
	* sysdeps/aarch64/multiarch/memchr.c: New file.
	* sysdeps/aarch64/multiarch/memchr_generic.S: Likewise.
	* sysdeps/aarch64/multiarch/memchr_nosimd.S: Likewise.

2019-02-01  Feng Xue  <fxue@os.amperecomputing.com>

	* sysdeps/aarch64/multiarch/Makefile (sysdep_routines):
	Add memset_emag.
	* sysdeps/aarch64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Add __memset_emag to memset ifunc.
	* sysdeps/aarch64/multiarch/memset.c (libc_ifunc):
	Add IS_EMAG check for ifunc dispatch.
	* sysdeps/aarch64/multiarch/memset_base64.S: New file.
	* sysdeps/aarch64/multiarch/memset_emag.S: New file.

2019-02-01  Feng Xue  <fxue@os.amperecomputing.com>

	* manual/tunables.texi (Tunable glibc.cpu.name): Add emag.
	* sysdeps/unix/sysv/linux/aarch64/cpu-features.c (cpu_list):
	Add emag.
	* sysdeps/unix/sysv/linux/aarch64/cpu-features.h (IS_EMAG):